--- a/src/index.css
+++ b/src/index.css
@@ -25,10 +25,6 @@ h2 {
   border-radius: 8px;
 }
 
-.container-fluid {
-  width: 50%;
-}
-
 .card {
   min-height: 250px;
   padding-left: 0%;
@@ -58,4 +54,5 @@ footer {
   bottom: 0;
   right: 0;
   text-align: center;
+  background-color: #002b36;
 }
